--- a/clash.ini
+++ b/clash.ini
@@ -5,8 +5,8 @@ ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyListChina.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanEasyPrivacy.list
 
-ruleset=💥 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
-ruleset=💥 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
+ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
+ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaDomain.list
@@ -18,10 +18,10 @@ ruleset=DIRECT,[]GEOIP,LAN
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
 
-custom_proxy_group=💥 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
+custom_proxy_group=🏫 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
 custom_proxy_group=💥 Proxy Network`select`[]🇭🇰 Hongkong`[]🇸🇬 Singapore`[]🇨🇳 Taiwan
-custom_proxy_group=🇭🇰 Hongkong`url-test`(港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇸🇬 Singapore`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇨🇳 Taiwan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇭🇰 香港`url-test`(港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇸🇬 新加坡`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇨🇳 台湾`url-test`(台|新北|彰化|TW|Taiwan)`http://www.apple.com/library/test/success.html`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
