--- a/clash.ini
+++ b/clash.ini
@@ -19,11 +19,6 @@ ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
 
 custom_proxy_group=🏫 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)`[]💥 Proxy Network
-custom_proxy_group=💥 Proxy Network`url-test`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`[]🇯🇵 日本`[]🇺🇲 美国`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇭🇰 香港`url-test`(港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇸🇬 新加坡`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇨🇳 台湾`url-test`(台|新北|彰化|TW|Taiwan)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇯🇵 日本`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇺🇲 美国`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=💥 Proxy Network`url-test`(香港|新加坡|狮城|台湾|韩国|日本)`http://www.apple.com/library/test/success.html`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
