--- a/clash.ini
+++ b/clash.ini
@@ -14,9 +14,12 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaDomain.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaCompanyIp.list
+
+ruleset=💥 Proxy Network,https://raw.githubusercontent.com/rangluwme/rule/main/proxy.list
 ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct.list
 
 ruleset=💥 Proxy Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
+ruleset=💥 Proxy Network,https://raw.githubusercontent.com/Mythologyli/ZJU-Rule/master/Clash/ProxyLite.list
 ruleset=DIRECT,[]GEOIP,LAN
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
