--- a/clash.ini
+++ b/clash.ini
@@ -25,7 +25,7 @@ ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
 
 custom_proxy_group=🏫 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
-custom_proxy_group=💥 Proxy Network`select`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾
+custom_proxy_group=💥 Proxy Network`url-test`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇭🇰 香港`url-test`(港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇸🇬 新加坡`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇨🇳 台湾`url-test`(台|新北|彰化|TW|Taiwan)`http://www.apple.com/library/test/success.html`10,,50
