--- a/clash.ini
+++ b/clash.ini
@@ -2,9 +2,8 @@
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanAD.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanProgramAD.list
 
-ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
-ruleset=🏫 ZJU Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
-ruleset=🏫 ZJU,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
+ruleset=🏫 ZJUWLAN,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
+ruleset=🏫 ZJUWLAN,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Apple.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
@@ -19,8 +18,7 @@ ruleset=DIRECT,[]GEOIP,LAN
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy Network,[]FINAL
 
-custom_proxy_group=🏫 ZJU Network`select`[]DIRECT`(ZJU|浙大|内网)
-custom_proxy_group=🏫 ZJU`select`(ZJU|浙大|内网)
+custom_proxy_group=🏫 ZJUWLAN`select`(ZJU|浙大|内网)
 custom_proxy_group=💥 Proxy Network`url-test`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇭🇰 香港`url-test`(香港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇸🇬 新加坡`url-test`(新加坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`10,,50
