--- a/clash.ini
+++ b/clash.ini
@@ -2,24 +2,23 @@
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanAD.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanProgramAD.list
 
-ruleset=🏫 ZJUWLAN,https://raw.githubusercontent.com/rangluwme/rule/main/zju.list
-ruleset=💥 Proxy Network,https://raw.githubusercontent.com/rangluwme/rule/main/proxy.list
+ruleset=🏫 ZJUWLAN,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
+ruleset=🏫 ZJUWLAN,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Apple.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaDomain.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaIp.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ChinaCompanyIp.list
-ruleset=DIRECT,https://raw.githubusercontent.com/rangluwme/rule/main/direct.list
 
-ruleset=💥 Proxy Network,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
-ruleset=💥 Proxy Network,https://raw.githubusercontent.com/Mythologyli/ZJU-Rule/master/Clash/ProxyLite.list
+ruleset=💥 Proxy,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ProxyGFWlist.list
+ruleset=💥 Proxy,https://raw.githubusercontent.com/Mythologyli/ZJU-Rule/master/Clash/ProxyLite.list
 ruleset=DIRECT,[]GEOIP,LAN
 ruleset=DIRECT,[]GEOIP,CN
-ruleset=💥 Proxy Network,[]FINAL
+ruleset=💥 Proxy,[]FINAL
 
-; custom_proxy_group=🏫 ZJUWLAN`select`[]DIRECT`(ZJU|浙大|内网)
-custom_proxy_group=💥 Proxy Network`select`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾
+custom_proxy_group=🏫 ZJUWLAN`select`[]DIRECT
+custom_proxy_group=💥 Proxy`select`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾
 custom_proxy_group=🇭🇰 香港`url-test`(香港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇸🇬 新加坡`url-test`(新加坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇨🇳 台湾`url-test`(台湾|TW|Taiwan)`http://www.apple.com/library/test/success.html`10,,50
