--- a/clash.ini
+++ b/clash.ini
@@ -2,8 +2,8 @@
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanAD.list
 ruleset=REJECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/BanProgramAD.list
 
-ruleset=🏫 ZJUWLAN,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
-ruleset=🏫 ZJUWLAN,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/ZJU-More-Scholar.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Microsoft.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/Apple.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ZJU-Rule/ZJU-Rule/master/Clash/GoogleCN.list
@@ -17,7 +17,7 @@ ruleset=DIRECT,[]GEOIP,LAN
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=💥 Proxy,[]FINAL
 
-custom_proxy_group=🏫 ZJUWLAN`select`[]DIRECT
+;custom_proxy_group=🏫 ZJUWLAN`select`[]DIRECT
 custom_proxy_group=💥 Proxy`select`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇨🇳 台湾
 custom_proxy_group=🇭🇰 香港`url-test`(香港|HK|Hong Kong)`http://www.apple.com/library/test/success.html`10,,50
 custom_proxy_group=🇸🇬 新加坡`url-test`(新加坡|狮城|SG|Singapore)`http://www.apple.com/library/test/success.html`10,,50
