--- a/directlist.yaml
+++ b/directlist.yaml
@@ -44,7 +44,7 @@ payload:
   - DOMAIN-SUFFIX,osapublishing.org
   - DOMAIN-SUFFIX,clarivate.com
   - DOMAIN-SUFFIX,ascelibrary.org
-
+  - DOMAIN-KEYWORD,onetrust
   # 本地/局域网地址
   - IP-CIDR,10.0.0.0/8,no-resolve
   - IP-CIDR,100.64.0.0/10,no-resolve
