--- a/directlist.yaml
+++ b/directlist.yaml
@@ -27,7 +27,6 @@ payload:
   - DOMAIN-SUFFIX,serialssolutions.com
   - DOMAIN-SUFFIX,duxiu.com
   - DOMAIN-SUFFIX,wanfangdata.com.cn
-
   - DOMAIN-SUFFIX,tandfonline.com
   - DOMAIN-KEYWORD,journal
   - DOMAIN-KEYWORD,science
@@ -46,16 +45,16 @@ payload:
   - DOMAIN-SUFFIX,ascelibrary.org
   - DOMAIN-KEYWORD,onetrust
   # 本地/局域网地址
-  - IP-CIDR,10.0.0.0/8,no-resolve
-  - IP-CIDR,100.64.0.0/10,no-resolve
-  - IP-CIDR,127.0.0.0/8,no-resolve
-  - IP-CIDR,172.16.0.0/12,no-resolve
-  - IP-CIDR,192.168.0.0/16,no-resolve
-  - IP-CIDR,198.18.0.0/16,no-resolve
-  - IP-CIDR,224.0.0.0/4,no-resolve
-  - IP-CIDR6,::1/128,no-resolve
-  - IP-CIDR6,fc00::/7,no-resolve
-  - IP-CIDR6,fe80::/10,no-resolve
-  - IP-CIDR6,fd00::/8,no-resolve
+  - IP-CIDR,10.0.0.0/8
+  - IP-CIDR,100.64.0.0/10
+  - IP-CIDR,127.0.0.0/8
+  - IP-CIDR,172.16.0.0/12
+  - IP-CIDR,192.168.0.0/16
+  - IP-CIDR,198.18.0.0/16
+  - IP-CIDR,224.0.0.0/4
+  - IP-CIDR6,::1/128
+  - IP-CIDR6,fc00::/7
+  - IP-CIDR6,fe80::/10
+  - IP-CIDR6,fd00::/8
   - DOMAIN-SUFFIX,cn
   - DOMAIN-KEYWORD,-cn
