--- a/directlist.yaml
+++ b/directlist.yaml
@@ -1,53 +1,26 @@
 payload:
-  - DOMAIN-SUFFIX,ip6-localhost
-  - DOMAIN-SUFFIX,ip6-loopback
-  - DOMAIN-SUFFIX,lan
-  - DOMAIN-SUFFIX,local
-  - DOMAIN-SUFFIX,localhost
   - IP-CIDR,0.0.0.0/8,no-resolve
   - IP-CIDR,10.0.0.0/8,no-resolve
-  - IP-CIDR,100.64.0.0/10,no-resolve
   - IP-CIDR,127.0.0.0/8,no-resolve
-  - IP-CIDR,172.16.0.0/12,no-resolve
   - IP-CIDR,192.168.0.0/16,no-resolve
-  - IP-CIDR,198.18.0.0/16,no-resolve
-  - IP-CIDR,224.0.0.0/4,no-resolve
   - IP-CIDR6,::1/128,no-resolve
   - IP-CIDR6,fc00::/7,no-resolve
   - IP-CIDR6,fe80::/10,no-resolve
   - IP-CIDR6,fd00::/8,no-resolve
   
   - DOMAIN-KEYWORD,cc98
-  - DOMAIN-KEYWORD,office
-  - DOMAIN-KEYWORD,hotmail
-  - DOMAIN-KEYWORD,outlook
   - DOMAIN-KEYWORD,icloud
   - DOMAIN-KEYWORD,apple
-  - DOMAIN-SUFFIX,live.com
-  - DOMAIN-SUFFIX,live.net
-  - DOMAIN-SUFFIX,onedrive.com
-  - DOMAIN-SUFFIX,msft.net
-  - DOMAIN-SUFFIX,msftauth.net
-  - DOMAIN-SUFFIX,msftidentity.com
-  - DOMAIN-SUFFIX,msidentity.com
-  - DOMAIN-SUFFIX,microsoftonline.com
-  
-  - DOMAIN-SUFFIX,zju.edu.cn
-  - DOMAIN-SUFFIX,acm.org
   - DOMAIN-SUFFIX,cnki.net
-  - DOMAIN-SUFFIX,gtadata.com
-  - DOMAIN-SUFFIX,jstor.org
   - DOMAIN-SUFFIX,webofscience.com
-  - DOMAIN-SUFFIX,inoteexpress.com
   - DOMAIN-SUFFIX,pnas.org
-  - DOMAIN-SUFFIX,cas.org
   - DOMAIN-SUFFIX,webofknowledge.com
-  - DOMAIN-SUFFIX,serialssolutions.com
   - DOMAIN-SUFFIX,duxiu.com
   - DOMAIN-SUFFIX,wanfangdata.com.cn
   - DOMAIN-SUFFIX,tandfonline.com
   - DOMAIN-KEYWORD,journal
   - DOMAIN-KEYWORD,science
+  - DOMAIN-KEYWORD,nature
   - DOMAIN-KEYWORD,springer
   - DOMAIN-KEYWORD,sciencedirect
   - DOMAIN-KEYWORD,elsevier
@@ -55,10 +28,7 @@ payload:
   - DOMAIN-SUFFIX,wiley.com
   - DOMAIN-SUFFIX,ieee.org
   - DOMAIN-SUFFIX,proquest.com
-  - DOMAIN-SUFFIX,nature.com
-  - DOMAIN-SUFFIX,acs.org
   - DOMAIN-SUFFIX,taylorfrancis.com
-  - DOMAIN-SUFFIX,osapublishing.org
   - DOMAIN-SUFFIX,clarivate.com
   - DOMAIN-SUFFIX,ascelibrary.org
   - DOMAIN-KEYWORD,onetrust
