--- a/proxylist.yaml
+++ b/proxylist.yaml
@@ -7,3 +7,4 @@ payload:
   - DOMAIN-SUFFIX,bing.com
   - DOMAIN-SUFFIX,onedrive.live.com
   - DOMAIN-SUFFIX,wikipedia.org
+  - DOMAIN-SUFFIX,bard.google.com
