--- a/directlist.yaml
+++ b/directlist.yaml
@@ -1,8 +1,18 @@
 payload:
+  # 本地/局域网地址
+  - DOMAIN-SUFFIX,ip6-localhost
+  - DOMAIN-SUFFIX,ip6-loopback
+  - DOMAIN-SUFFIX,lan
+  - DOMAIN-SUFFIX,local
+  - DOMAIN-SUFFIX,localhost
   - IP-CIDR,0.0.0.0/8,no-resolve
   - IP-CIDR,10.0.0.0/8,no-resolve
+  - IP-CIDR,100.64.0.0/10,no-resolve
   - IP-CIDR,127.0.0.0/8,no-resolve
+  - IP-CIDR,172.16.0.0/12,no-resolve
   - IP-CIDR,192.168.0.0/16,no-resolve
+  - IP-CIDR,198.18.0.0/16,no-resolve
+  - IP-CIDR,224.0.0.0/4,no-resolve
   - IP-CIDR6,::1/128,no-resolve
   - IP-CIDR6,fc00::/7,no-resolve
   - IP-CIDR6,fe80::/10,no-resolve
@@ -32,5 +42,12 @@ payload:
   - DOMAIN-SUFFIX,clarivate.com
   - DOMAIN-SUFFIX,ascelibrary.org
   - DOMAIN-KEYWORD,onetrust
+  
+  - DOMAIN-KEYWORD,rangluw,DIRECT
+  - DOMAIN-KEYWORD,caixin,DIRECT
+  - DOMAIN-SUFFIX,verifystore.com,DIRECT
+  - DOMAIN-SUFFIX,libsyn.com,DIRECT
+  - DOMAIN-SUFFIX,clash.razord.top,DIRECT
+  
   - DOMAIN-SUFFIX,cn
   - DOMAIN-KEYWORD,-cn
