--- a/proxylist.yaml
+++ b/proxylist.yaml
@@ -4,7 +4,7 @@ payload:
   - DOMAIN-SUFFIX,auth0.com
   - DOMAIN-SUFFIX,deepl.com
   - DOMAIN-SUFFIX,sentry.io
-  - DOMAIN-keyword,bing
+  - DOMAIN-KEYWORD,bing
   - DOMAIN-SUFFIX,onedrive.live.com
   - DOMAIN-SUFFIX,wikipedia.org
   - DOMAIN-SUFFIX,bard.google.com
