--- a/proxylist.yaml
+++ b/proxylist.yaml
@@ -8,3 +8,5 @@ payload:
   - DOMAIN-SUFFIX,onedrive.live.com
   - DOMAIN-SUFFIX,wikipedia.org
   - DOMAIN-SUFFIX,bard.google.com
+  - DOMAIN-SUFFIX,challenges.cloudflare.com
+  - DOMAIN-SUFFIX,stripe.com
