--- a/proxylist.yaml
+++ b/proxylist.yaml
@@ -6,7 +6,7 @@ payload:
   - DOMAIN-SUFFIX,sentry.io
   - DOMAIN-KEYWORD,bing
   - DOMAIN-SUFFIX,onedrive.live.com
-  - DOMAIN-SUFFIX,wikipedia.org
+  - DOMAIN-KEYWORD,wikipedia
   - DOMAIN-SUFFIX,bard.google.com
   - DOMAIN-SUFFIX,challenges.cloudflare.com
   - DOMAIN-SUFFIX,stripe.com
