--- a/rejectlist.yaml
+++ b/rejectlist.yaml
@@ -6,3 +6,6 @@ payload:
   - DOMAIN-KEYWORD,adservice
   - DOMAIN-SUFFIX,log-global.aliyuncs.com
   - DOMAIN-KEYWORD,logitechg
+  - DOMAIN-SUFFIX,adobe.com,REJECT
+  - DOMAIN-SUFFIX,error.taobao.com,REJECT
+  - DOMAIN-SUFFIX,err.taobao.com,REJECT
