--- a/proxylist.yaml
+++ b/proxylist.yaml
@@ -10,3 +10,4 @@ payload:
   - DOMAIN-SUFFIX,bard.google.com
   - DOMAIN-SUFFIX,challenges.cloudflare.com
   - DOMAIN-SUFFIX,stripe.com
+  - DOMAIN-SUFFIX,poe.com
