--- a/proxylist.yaml
+++ b/proxylist.yaml
@@ -2,12 +2,56 @@ payload:
   - DOMAIN-SUFFIX,openai.com
   - DOMAIN-SUFFIX,ai.com
   - DOMAIN-SUFFIX,auth0.com
-  - DOMAIN-SUFFIX,deepl.com
-  - DOMAIN-SUFFIX,sentry.io
-  - DOMAIN-KEYWORD,bing
-  - DOMAIN-SUFFIX,onedrive.live.com
-  - DOMAIN-KEYWORD,wikipedia
-  - DOMAIN-SUFFIX,bard.google.com
   - DOMAIN-SUFFIX,challenges.cloudflare.com
   - DOMAIN-SUFFIX,stripe.com
   - DOMAIN-SUFFIX,poe.com
+  
+# 国外域名关键字
+  - DOMAIN-KEYWORD,github
+  - DOMAIN-KEYWORD,gmail
+  - DOMAIN-KEYWORD,google
+  - DOMAIN-KEYWORD,instagram
+  - DOMAIN-KEYWORD,porn
+  - DOMAIN-KEYWORD,sci-hub
+  - DOMAIN-KEYWORD,spotify
+  - DOMAIN-KEYWORD,telegram
+  - DOMAIN-KEYWORD,twitter
+  - DOMAIN-KEYWORD,whatsapp
+  - DOMAIN-KEYWORD,youtube
+  - DOMAIN-SUFFIX,wiktionary.org
+  - DOMAIN-SUFFIX,wikimedia.org
+  - DOMAIN-KEYWORD,amazon
+
+# OneDrive
+  - DOMAIN-KEYWORD,1drv
+  - DOMAIN-KEYWORD,onedrive
+  - DOMAIN-KEYWORD,skydrive
+  - DOMAIN-SUFFIX,livefilestore.com
+  - DOMAIN-SUFFIX,oneclient.sfx.ms
+  - DOMAIN-SUFFIX,onedrive.com
+  - DOMAIN-SUFFIX,onedrive.live.com
+  - DOMAIN-SUFFIX,photos.live.com
+  - DOMAIN-SUFFIX,skydrive.wns.windows.com
+  - DOMAIN-SUFFIX,spoprod-a.akamaihd.net
+  - DOMAIN-SUFFIX,storage.msn.com
+#  - DOMAIN-SUFFIX,aria.microsoft.com
+
+# Twitter
+  - DOMAIN-SUFFIX,t.co
+  - DOMAIN-SUFFIX,twimg.co
+  - DOMAIN-SUFFIX,twimg.com
+  - DOMAIN-SUFFIX,twimg.org
+
+# Telegram
+  - DOMAIN-SUFFIX,t.me
+  - DOMAIN-SUFFIX,tdesktop.com
+  - DOMAIN-SUFFIX,telegra.ph
+  - DOMAIN-SUFFIX,telegram.me
+  - DOMAIN-SUFFIX,telegram.org
+  - DOMAIN-SUFFIX,telesco.pe
+  - IP-CIDR,91.108.0.0/16
+  - IP-CIDR,109.239.140.0/24
+  - IP-CIDR,149.154.160.0/20
+  - IP-CIDR6,2001:67c:4e8::/48
+  - IP-CIDR6,2001:b28:f23d::/48
+  - IP-CIDR6,2001:b28:f23f::/48
