--- a/directlist.yaml
+++ b/directlist.yaml
@@ -685,3 +685,4 @@ payload:
   - DOMAIN-SUFFIX,zhimg.com
   - DOMAIN-SUFFIX,zhongsou.com
   - DOMAIN-SUFFIX,zhuihd.com
+  - DOMAIN-SUFFIX,taobao.com
